--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity1">
+
+        </activity>
+        <activity android:name=".Activity2">
+
+        </activity>
     </application>
 
 </manifest>
